--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="information">
       <p class="interesting-fact">They often pick up the food item with their front paws to examine it and rub the item, sometimes to remove unwanted parts.</p>
       <ul class="list">
-        <li><span>Type</span>: Mammals</li>
-        <li><span>Diet</span>: Omnivore</li>
-        <li><span>Average life span in the wild</span>: 2 to 3 years</li>
-        <li><span>Size</span>: 60 to 95 cm</li>
-        <li><span>Weight</span>: 1.8 to 10.4 kg</li>
+        <li><span class="bold">Type</span>: Mammals</li>
+        <li><span class="bold">Diet</span>: Omnivore</li>
+        <li><span class="bold">Size</span>: 60 to 95 cm</li>
+        <li><span class="bold">Weight</span>: 1.8 to 10.4 kg</li>
+        <li><span class="bold">Average life span in the wild</span>: 2 to 3 years</li>
       </ul>
       <p>The raccoon is a medium-sized mammal native to North America. Two of the raccoon's most distinctive features are its extremely dexterous front paws and its facial mask, which are themes in the mythologies of the indigenous peoples of the Americas.</p>
     </div>
